--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "todotaskapi": "file:",
     "zod": "^3.24.2"
   },
   "devDependencies": {
